main_firewall.tf
# Creating a Security Group
resource "aws_security_group" "normal_rule" {

  depends_on = [
    aws_vpc.demo_vpc,
    aws_subnet.public_subnet,
    aws_subnet.private_subnet
  ]

  description = "HTTP, PING, SSH"

  # Name of the security Group!
  name = "normal_port_enable"

  # VPC ID in which Security group has to be created!
  vpc_id = aws_vpc.demo_vpc.id

  # Created an inbound rule for webserver access!
  ingress {
    description = "HTTP for webserver"
    from_port   = 80
    to_port     = 80

    # Here adding tcp instead of http, because http in part of tcp only!
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Created an inbound rule for ping
  ingress {
    description = "Ping"
    from_port   = 0
    to_port     = 0
    protocol    = "ICMP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Created an inbound rule for SSH
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22

    # Here adding tcp instead of ssh, because ssh in part of tcp only!
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outward Network Traffic
  egress {
    description = "output from webserver"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
